# symposium-acp

./: Cargo.toml
src/elizacp/src/: eliza.rs  lib.rs
src/elizacp/tests/: mcp_tool_invocation.rs
src/sacp/: Cargo.toml
src/sacp-conductor/: Cargo.toml
src/sacp-conductor/src/: conductor.rs  lib.rs  snoop.rs  trace.rs
src/sacp-conductor/src/conductor/mcp_bridge/: actor.rs  http.rs
src/sacp-conductor/tests/: empty_conductor_eliza.rs  initialization_sequence.rs  mcp-integration.rs  mcp_server_handler_chain.rs  nested_conductor.rs  scoped_mcp_server.rs  standalone_mcp_server.rs  test_mcp_tool_output_types.rs  test_session_id_in_mcp_tools.rs  test_tool_enable_disable.rs  test_tool_fn.rs  trace_client_mcp_server.rs  trace_mcp_tool_call.rs
src/sacp-conductor/tests/mcp_integration/: proxy.rs
src/sacp-cookbook/src/: lib.rs
src/sacp-rmcp/examples/: with_mcp_server.rs
src/sacp-rmcp/src/: lib.rs
src/sacp-test/: Cargo.toml
src/sacp-test/src/: arrow_proxy.rs
src/sacp-tokio/: Cargo.toml
src/sacp-tokio/src/: a2a_agent.rs  acp_agent.rs  acp_http_agent.rs  lib.rs
src/sacp-tokio/tests/: debug_logging.rs  test_acp_leader.rs
src/sacp/examples/: simple_agent.rs  yolo_one_shot_client.rs
src/sacp/src/: jsonrpc.rs  lib.rs  role.rs  session.rs
src/sacp/src/jsonrpc/: handlers.rs  incoming_actor.rs
src/sacp/src/mcp_server/: active_session.rs  builder.rs  server.rs  tool.rs
src/sacp/src/schema/: enum_impls.rs
src/sacp/src/util/: typed.rs
src/sacp/tests/: jsonrpc_advanced.rs  jsonrpc_connection_builder.rs  match_dispatch.rs
src/yopo/src/: lib.rs
(+2 files in other folders)
