[package]
name = "sacp-tokio"
version = "11.0.0-alpha.1"
edition = "2024"
description = "Tokio-based utilities for SACP (Symposium's extensions to ACP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "protocol", "ai", "tokio"]
categories = ["development-tools"]

[dependencies]
sacp = { version = "11.0.0-alpha.1", path = "../sacp" }
a2a-rs = { path = "../../../codex/codex-rs/a2a", default-features = false, features = ["client"] }
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
shell-words = "1.1"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[dev-dependencies]
expect-test.workspace = true
sacp-test = { path = "../sacp-test" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
